add stie metadata and mdx

--- a/posts/2020/2020-01-11-first-post.mdx
+++ b/posts/2020/2020-01-11-first-post.mdx
@@ -1,6 +1,8 @@
 ---
 title: My first blog post
-date: 2020-01-11
+description: "In this blog I'm planning to talk about software engineering, web development, programming languages,
+data structures and algorithms, blockchain, aritificial intelligence, machine learning, IoT, etc."
+date: "2020-01-11"
 published: false
 ---
 
