show blog posts on the index page

--- a/posts/2020/2020-01-11-first-post.mdx
+++ b/posts/2020/2020-01-11-first-post.mdx
@@ -3,7 +3,7 @@ title: My first blog post
 description: "In this blog I'm planning to talk about software engineering, web development, programming languages,
 data structures and algorithms, blockchain, aritificial intelligence, machine learning, IoT, etc."
 date: "2020-01-11"
-published: false
+published: true
 ---
 
 # Hello, World!
